--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <!-- Navigation principale -->
+    <!-- Navigation principale
     <nav>
         <ul>
             <li><a href="index.html" class="active">Accueil</a></li>
@@ -17,7 +17,7 @@
             <li><a href="organisation.html">Mon Organisation</a></li>
             <li><a href="aide.html">Besoin d'aide ?</a></li>
         </ul>
-    </nav>
+    </nav> -->
 
     <!-- En-tête principal -->
     <header class="content-section">
