--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Aide aux devoirs pour collégiens - Interface adaptée aux dyslexiques">
-    <title>Aide Devoirs Collège - Accueil</title>
+    <title>Devoirs Faits au Collège - Accueil</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
