--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <!-- Bouton de toggle (avant </body>) -->
     <button id="reading-mode-toggle">
         <span class="icon">📖</span>
-        <span class="text">Mode normal</span>
+        <span class="text">Changer affichage</span>
     </button>
 
 </body>
